--- a/lab/Ripple.html
+++ b/lab/Ripple.html
@@ -9,57 +9,33 @@
 <body>
   鼠标点击出现文字测试 
 </body>
-<style>
-.text-popup {
-    animation: textPopup 1s;
-    color: #666666;
-    user-select: none;
-    white-space: nowrap;
-    position: absolute;
-    z-index: 99;
-}
-@keyframes textPopup {
-    0%, 100% {
-        opacity: 0;
-    }
-    5% {
-        opacity: 1;
-    }
-    100% {
-        transform: translateY(-50px);    
-    }
-}
-</style>
-<script>
-  var fnTextPopup = function (arr, options) {
-    // arr参数
-    if (!arr || !arr.length) {
-        return;    
-    }
-    // 主逻辑
-    var index = 0;
-    document.documentElement.addEventListener('click', function (event) {
-        var x = event.pageX, y = event.pageY;
-        var eleText = document.createElement('span');
-        eleText.className = 'text-popup';
-        this.appendChild(eleText);
-        if (arr[index]) {
-            eleText.innerHTML = arr[index];
-        } else {
-            index = 0;
-            eleText.innerHTML = arr[0];
-        }
-        // 动画结束后删除自己
-        eleText.addEventListener('animationend', function () {
-            eleText.parentNode.removeChild(eleText);
+<!--鼠标文字-->
+var a_idx = 0;
+jQuery(document).ready(function($) {
+    $("body").click(function(e) {
+        var a = new Array('Python', 'C', 'JavaScript', 'PHP', 'Ruby', 'Java', 'Objective-C', 'C#', 'C++', 'MATLAB');
+        var $i = $("<span />").text(a[a_idx]);
+        a_idx = (a_idx + 1) % a.length;
+        var x = e.pageX,
+            y = e.pageY;
+        $i.css({
+            "z-index": 99999999999999999999999999999999999999999999999999999999999999999999999999 ,
+            "top": y - 20,
+            "left": x,
+            "position": "absolute",
+            "font-weight": "bold",
+            "color": "#000000"
         });
-        // 位置
-        eleText.style.left = (x - eleText.clientWidth / 2) + 'px';
-        eleText.style.top = (y - eleText.clientHeight) + 'px';
-        // index递增
-        index++;
-    });    
-  };
-fnTextPopup(['Python', 'C', 'JavaScript', 'PHP', 'Ruby', 'Java', 'Objective-C', 'C#', 'C++', 'MATLAB']);
-</script>
+        $("body").append($i);
+        $i.animate({
+                "top": y - 180,
+                "opacity": 0
+            },
+            1500,
+            function() {
+                $i.remove();
+            });
+    });
+});
+
 </html>
