--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
----
-layout: home
----
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Test</title>
+</head>
+<body>
+    <h1>index</h1>
+</body>
+</html>
+
