--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Test</title>
-</head>
-<body>
-    <h1>index</h1>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="refresh" content="1;url=https://wallfacerlogic.github.io/Cloud/blog/">
+		<title>Cloud</title>
+	</head>
+	<body>
+	    <center>
+			<h1>Loading...</h1>
+		</center>
+	</body>
 </html>
 
