--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="robots" content="all" />
   <meta name="robots" content="index,follow"/>
-  <link rel="stylesheet" type="text/css" href="s-text.css">
+  <link rel="stylesheet" type="text/css" href="wallfacerlogic。github.io/Cloud/s-text.css">
 </head>
 <body>
   <svg viewBox="0 0 1320 300">
