--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="refresh" content="1;url=https://wallfacerlogic.github.io/Cloud/blog/">
+		 <link rel="stylesheet" type="text/css" href="s-text.css">
 		<title>Cloud</title>
 	</head>
 	<body>
-	    <center>
-			<h1>Loading...</h1>
-		</center>
+  <svg viewBox="0 0 1320 300">
+  <!-- Symbol -->
+  <symbol id="s-text">
+    <text text-anchor="middle"
+          x="50%" y="50%" dy=".35em">
+      Loading...
+    </text>
+  </symbol>  
+  <!-- Duplicate symbols -->
+  <use xlink:href="#s-text" class="text"
+       ></use>
+  <use xlink:href="#s-text" class="text"
+       ></use>
+  <use xlink:href="#s-text" class="text"
+       ></use>
+</svg>
 	</body>
 </html>
 
