--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="loading.css">
-		<meta http-equiv="refresh" content=";url=https://wallfacerlogic.github.io/Cloud/blog">
+		<meta http-equiv="refresh" content=";url=https://wallfacerlogic.github.io/Cloud/blog/index.html">
 		<title>Cloud</title>
 	</head>
 	<body>
