--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="loading.css">
-		<meta http-equiv="refresh" content="2;url=https://ghe0000.github.io/NewCloud/booklist/">
+		<meta http-equiv="refresh" content="2;url=https://ghe0000.github.io/NewCloud/notes/">
 		<title>Cloud</title>
 	</head>
 	<body>
