--- a/notes.html
+++ b/notes.html
@@ -8,8 +8,9 @@
 	</head>
 	<body>
 		<center>
-			<h1>Loading...</h1>
-		</center>
+		<h1>页面迁移中，正在跳转新的链接...</h1>
+		<a href="https://ghe0000.github.io/NewCloud/notes">手动跳转</a>
+    </center>
 	    <div class="loading">
 			<span></span>
 			<span></span>
