--- a/booklist.html
+++ b/booklist.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<center>
-			<h1>Loading...</h1>
+			<h1>页面迁移中，正在跳转新的链接...</h1>
+      <a href="https://ghe0000.github.io/NewCloud/booklist">手动跳转</a>
 		</center>
 	    <div class="loading">
 			<span></span>
