--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -5,13 +5,43 @@ title: "Posts by Tags"
 author_profile: true
 ---
 
+<!---->
+<!--{% include base_path %}-->
+<!--{% include group-by-array collection=site.posts field="tags" %}-->
+<!---->
+<!--{% for tag in group_names %}-->
+<!--  {% assign posts = group_items[forloop.index0] %}-->
+<!--  <h2 id="{{ tag | slugify }}" class="archive__subtitle">{{ tag }}</h2>-->
+<!--  {% for post in posts %}-->
+<!--    {% include archive-single.html %}-->
+<!--  {% endfor %}-->
+<!--{% endfor %}-->
+
+
 {% include base_path %}
-{% include group-by-array collection=site.posts field="tags" %}
+
+{% assign entries_layout = page.entries_layout | default: 'list' %}
+{% assign filtered_posts = site.posts | where_exp: "item", "item.hidden != true" %}
+{% include group-by-array collection=filtered_posts field="tags" %}
+
+<ul class="taxonomy__index">
+  {% for tag in group_names %}
+    <li>
+      <a href="#{{ tag | slugify }}">
+        <strong>{{ tag }}</strong> <span class="taxonomy__count">{{ group_items[forloop.index0] | size }}</span>
+      </a>
+    </li>
+  {% endfor %}
+</ul>
 
 {% for tag in group_names %}
   {% assign posts = group_items[forloop.index0] %}
-  <h2 id="{{ tag | slugify }}" class="archive__subtitle">{{ tag }}</h2>
-  {% for post in posts %}
-    {% include archive-single.html %}
-  {% endfor %}
+  <section id="{{ tag | slugify }}" class="taxonomy__section">
+    <h2 class="archive__subtitle">{{ tag }}</h2>
+    <div class="entries-{{ entries_layout }}">
+      {% for post in posts %}
+        {% include archive-single.html type=entries_layout %}
+      {% endfor %}
+    </div>
+  </section>
 {% endfor %}
