--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -6,12 +6,30 @@ author_profile: true
 ---
 
 {% include base_path %}
-{% include group-by-array collection=site.posts field="categories" %}
+
+{% assign entries_layout = page.entries_layout | default: 'list' %}
+{% assign filtered_posts = site.posts | where_exp: "item", "item.hidden != true" %}
+{% include group-by-array collection=filtered_posts field="categories" %}
+
+<ul class="taxonomy__index">
+  {% for category in group_names %}
+    <li>
+      <a href="#{{ category | slugify }}">
+        <strong>{{ category }}</strong> <span class="taxonomy__count">{{ group_items[forloop.index0] | size }}</span>
+      </a>
+    </li>
+  {% endfor %}
+</ul>
 
 {% for category in group_names %}
   {% assign posts = group_items[forloop.index0] %}
-  <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
-  {% for post in posts %}
-    {% include archive-single.html %}
-  {% endfor %}
+  <section id="{{ category | slugify }}" class="taxonomy__section">
+    <h2 class="archive__subtitle">{{ category }}</h2>
+    <div class="entries-{{ entries_layout }}">
+      {% for post in posts %}
+        {% include archive-single.html type=entries_layout %}
+      {% endfor %}
+    </div>
+  </section>
 {% endfor %}
+
