--- a/_pages/category-archive-2.html
+++ b/_pages/category-archive-2.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-permalink: /categories/
+permalink: /categories-2/
 title: "Posts by Category"
 author_profile: true
 ---
@@ -14,8 +14,9 @@ author_profile: true
 <ul class="taxonomy__index">
   {% for category in group_names %}
     <li>
-      <a href="#{{ category | slugify }}">
-        <strong>{{ category }}</strong> <span class="taxonomy__count">{{ group_items[forloop.index0] | size }}</span>
+      <a href="#category-{{ forloop.index }}">
+        <strong>{{ category }}</strong> 
+        <span class="taxonomy__count">{{ group_items[forloop.index0] | size }}</span>
       </a>
     </li>
   {% endfor %}
@@ -23,7 +24,7 @@ author_profile: true
 
 {% for category in group_names %}
   {% assign posts = group_items[forloop.index0] %}
-  <section id="{{ category | slugify }}" class="taxonomy__section">
+  <section id="category-{{ forloop.index }}" class="taxonomy__section">
     <h2 class="archive__subtitle">{{ category }}</h2>
     <div class="entries-{{ entries_layout }}">
       {% for post in posts %}
@@ -32,5 +33,4 @@ author_profile: true
     </div>
   </section>
 {% endfor %}
-
 
