--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -14,9 +14,8 @@ author_profile: true
 <ul class="taxonomy__index">
   {% for tag in group_names %}
     <li>
-      <a href="#tag-{{ forloop.index }}">
-        <strong>{{ tag }}</strong> 
-        <span class="taxonomy__count">{{ group_items[forloop.index0] | size }}</span>
+      <a href="#{{ tag | slugify }}">
+        <strong>{{ tag }}</strong> <span class="taxonomy__count">{{ group_items[forloop.index0] | size }}</span>
       </a>
     </li>
   {% endfor %}
@@ -24,7 +23,7 @@ author_profile: true
 
 {% for tag in group_names %}
   {% assign posts = group_items[forloop.index0] %}
-  <section id="tag-{{ forloop.index }}" class="taxonomy__section">
+  <section id="{{ tag | slugify }}" class="taxonomy__section">
     <h2 class="archive__subtitle">{{ tag }}</h2>
     <div class="entries-{{ entries_layout }}">
       {% for post in posts %}
