--- a/_pages/category-archive-test.html
+++ b/_pages/category-archive-test.html
@@ -12,7 +12,7 @@ author_profile: true
 {% include group-by-array collection=filtered_posts field="categories" %}
 
 {% comment %} 在 taxonomy__index 外层添加与 archive__item 相同的容器 {% endcomment %}
-<div class="{{ include.type | default: 'list' }}__item"> <!-- 与 archive__item 相同的父容器 -->
+<div class="page__inner-wrap">
   <ul class="taxonomy__index">
     {% for category in group_names %}
       <li>
