--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -1,5 +1,5 @@
 ---
-layout: archive
+layout: single
 permalink: /categories/
 title: "Posts by Category"
 author_profile: true
@@ -11,15 +11,15 @@ author_profile: true
 {% assign filtered_posts = site.posts | where_exp: "item", "item.hidden != true" %}
 {% include group-by-array collection=filtered_posts field="categories" %}
 
-<ul class="taxonomy__index">
-  {% for category in group_names %}
-    <li>
-      <a href="#{{ category | slugify }}">
-        <strong>{{ category }}</strong> <span class="taxonomy__count">{{ group_items[forloop.index0] | size }}</span>
-      </a>
-    </li>
-  {% endfor %}
-</ul>
+  <ul class="taxonomy__index">
+    {% for category in group_names %}
+      <li>
+        <a href="#{{ category | slugify }}">
+          <strong>{{ category }}</strong> <span class="taxonomy__count">{{ group_items[forloop.index0] | size }}</span>
+        </a>
+      </li>
+    {% endfor %}
+  </ul>
 
 {% for category in group_names %}
   {% assign posts = group_items[forloop.index0] %}
