--- a/_pages/thoughts.html
+++ b/_pages/thoughts.html
@@ -5,8 +5,10 @@ title: "Thoughts"
 author_profile: true
 ---
 
+{% assign entries_layout = page.entries_layout | default: 'list' %}
+{% assign thoughtsByYear = site.thoughts | where_exp: "item", "item.hidden != true" | sort: 'date' | reverse | group_by_exp: 'post', 'post.date | date: "%Y"' | reverse %}
+
 <ul class="taxonomy__index">
-  {% assign thoughtsByYear = site.thoughts | where_exp: "item", "item.hidden != true" | group_by_exp: 'post', 'post.date | date: "%Y"' %}
   {% for year in thoughtsByYear %}
     <li>
       <a href="#{{ year.name }}">
@@ -15,7 +17,6 @@ author_profile: true
     </li>
   {% endfor %}
 </ul>
-{% assign entries_layout = page.entries_layout | default: 'list' %}
 
 {% for year in thoughtsByYear %}
   <section id="{{ year.name }}" class="taxonomy__section">
