--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -8,7 +8,7 @@ redirect_from:
 ---
 
 {% assign entries_layout = page.entries_layout | default: 'list' %}
-{% assign postsByYear = site.posts | where_exp: "item", "item.hidden != true" | group_by_exp: 'post', 'post.date | date: "%Y"' | reverse %}
+{% assign postsByYear = site.posts | where_exp: "item", "item.hidden != true" | group_by_exp: 'post', 'post.date | date: "%Y"' %}
 
 <ul class="taxonomy__index">
   {% for year in postsByYear %}
